--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
         <nav>
             <ul>
                 {% for item in site.data.settings.menu %}
-                    <li><a href="{{ site.baseurl }}{{ item.url }}">{{item.title}}</a></li>
+                    <li><a href="{{ site.url }}{{ item.url }}">{{item.title}}</a></li>
                 {% endfor %}
             </ul>
         </nav>
