--- a/_includes/home/about-section.html
+++ b/_includes/home/about-section.html
@@ -4,7 +4,7 @@
             <h2>Wer ich bin?</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat aperiam assumenda sed. Laborum unde beatae sint ipsa eius? Doloribus sequi accusamus blanditiis porro quo. Fugit hic ullam illo harum est. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde impedit, officiis eius esse iure similique dolore aliquid itaque, doloribus, ex tempore ad non? Incidunt vero nobis, quisquam eius amet natus?</p>
             <p>
-                <a href="/about" class="btn primary">Erfahren Sie mehr</a>
+                <a href="{{ site.baseurl }}/about" class="btn primary">Erfahren Sie mehr</a>
             </p>
         </article>
     </div>
