--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,13 +4,13 @@
             &copy; 2020 by {{ site.title }}
         </div>
         <ul class="footer-links">
-            <li><a href="/impressum">Impressum</a></li>
-            <li><a href="/disclaimer">Datenschutz</a></li>
+            <li><a href="{{ site.baseurl }}/impressum">Impressum</a></li>
+            <li><a href="{{ site.baseurl }}/disclaimer">Datenschutz</a></li>
         </ul>
     </div>
 </footer>
 
 <div class="mobile-nav-overlay"></div>
 
-<script src="/assets/js/jquery-3.5.1.min.js"></script>
-<script src="/assets/js/main.js"></script>
+<script src="{{ site.baseurl }}/assets/js/jquery-3.5.1.min.js"></script>
+<script src="{{ site.baseurl }}/assets/js/main.js"></script>
