--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header>
     <div class="wrapper">
-        <a href="#" class="logo">{{ site.title }}</a>
+        <a href="{{ site.baseurl }}" class="logo">{{ site.title }}</a>
         <div class="navcontrol">
             <span class="navicon fa fa-bars" id="navicon"></span>
             <span class="closeicon fa fa-close" id="closeicon"></span>
@@ -8,7 +8,7 @@
         <nav>
             <ul>
                 {% for item in site.data.settings.menu %}
-                    <li><a href="{{ site.url }}{{ item.url }}">{{item.title}}</a></li>
+                    <li><a href="{{ site.baseurl }}{{ item.url }}">{{item.title}}</a></li>
                 {% endfor %}
             </ul>
         </nav>
