--- a/_includes/home/landing-section.html
+++ b/_includes/home/landing-section.html
@@ -6,8 +6,8 @@
                 Mein name ist Daniel Cunningham alias NxtLevelMedia und dies ist mein Portfolio. Herzlich Willkommen!
             </p>
             <p class="welcome-cta">
-                <a href="/about" class="btn primary">Mehr erfahren</a>
-                <a href="/works" class="btn secondary">Meine Projekte</a>
+                <a href="{{ site.baseurl }}/about" class="btn primary">Mehr erfahren</a>
+                <a href="{{ site.baseurl }}/works" class="btn secondary">Meine Projekte</a>
             </p>
         </article>
     </div>
