--- a/_includes/home/blog-section.html
+++ b/_includes/home/blog-section.html
@@ -11,13 +11,13 @@
             <ul class="post-list">
                 {% for item in site.posts limit: 6 %}
                     <li class="post">
-                        <div class="post-image" style="background-image: url('{{ site.baseurl }}{% if item.image %}{{item.image}}{% else %}{{ site.data.settings.noImage }}{% endif %}')">
+                        <div class="post-image" style="background-image: url('{% if item.image %}{{ site.baseurl }}{{item.image}}{% else %}{{ site.data.settings.noImage }}{% endif %}')">
                             
                         </div>
 
                         <div class="post-content">
                             <article>
-                                <h3 class="post-title"><a href="{{ item.url }}">{{ item.title }}</a></h3>
+                                <h3 class="post-title"><a href="{{ site.baseurl }}{{ item.url }}">{{ item.title }}</a></h3>
                                 <p class="post-excerpt">{{ item.excerpt }}</p>
                                 <span class="post-meta">Geschrieben am {{ item.date | date: "%d.%m.%Y um %H:%M" }}</span>
                             </article>
