--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,5 +1,12 @@
 ---
 layout: default
 ---
-<h2>{{ page.title }}</h2>
-{{ content }}
+
+<section>
+    <div class="wrapper">
+        <article>
+            <h2>{{ page.title }}</h2>
+            {{ content }}
+        </article>
+    </div>
+</section>
