--- a/_includes/home/about-section.html
+++ b/_includes/home/about-section.html
@@ -2,7 +2,9 @@
     <div class="wrapper page">
         <article class="swingin">
             <h2>Wer ich bin?</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat aperiam assumenda sed. Laborum unde beatae sint ipsa eius? Doloribus sequi accusamus blanditiis porro quo. Fugit hic ullam illo harum est. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde impedit, officiis eius esse iure similique dolore aliquid itaque, doloribus, ex tempore ad non? Incidunt vero nobis, quisquam eius amet natus?</p>
+            <p>
+                Hallo, mein Name ist Daniel Cunningham, 30 Jahre jung und komme aus dem Hessischen Flörsheim am Main. Hauptberuflich bin ich aus leidenschaft, stellvertretender Marktleiter eines Lebensmittel Discounters. Mit 13 Jahren (2003) habe ich mein Hobby als Webdesigner entdeckt und lehre mir die Technik selbst. Von beginn an, habe ich alles mögliche hinter Internetseiten / Webseiten hinterfragt und habe mir so mit Hilfe von zahlreichen Tutorials und Dokumentationen, sämtliches Wissen angeeignet.
+            </p>
             <p>
                 <a href="{{ site.baseurl }}/about" class="btn primary">Erfahren Sie mehr</a>
             </p>
