--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <section>
-    <div class="wrapper">
+    <div class="wrapper page">
         <article>
             <h2>{{ page.title }}</h2>
             {{ content }}
